# template-python-project

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/actions/setup-poetry/: action.yml
.github/workflows/: main.yml
coverage/: covindex.html  d_b9a00e55f22b3d77___init___py.html  index.html  status.json
overview/: index.html
tests/: tools_test.py
